syntax = "proto3";

package c;

// Interface exported by the server.
service C {
    rpc CallA(Req) returns (Empty) {}
    rpc CallB(Req) returns (Empty) {}
    rpc CallC(Req) returns (Empty) {}
}

message Req {
    string Name = 1;
}
// Empty msg
message Empty {}
